<resources>
    <string name="app_name">Digi Note</string>
    <string name="title_activity_description">Description</string>

    <string name="action_share">share data</string>

    <string name="title_activity_content_main">Digi Note</string>


    /*start here*/


    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailAct</string>
    <string name="title_setting">Settring</string>
    <string name="title_listen">Listen</string>
    <string name="title_share">Share</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_language">Language</string>

    <string name="pref_night_mode_title">Night Mode</string>
    <string name="pref_night_mode">Start Night Mode so you can read with easy in deam Light..
    </string>


    <string name="pref_title_choose_language">Click to  choose language</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_text_size">Text size</string>

    <string name="pref_title_text_size">Text size</string>


    <!-- Example settings for Notifications -->
    <string name="pref_header_night_mode">Night Mode</string>

    <string name="pref_title_night_mode">Night mode on/off</string>


    <string name="default_gallery_storage">My Videos</string>
    <string name="title_night_mode">Night mode</string>
    <string name="to_read_in_deam_light">To read in deam light</string>
    <string name="text_size">Text size of story</string>
    <string name="summary_upload_video_quality">text size of the content</string>
    <string name="TextSize">TextSize</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">this application for the person who havings Smart phone and want to use as tool to increase its learnings </string>
    <string name="app_version">2.0</string>
    <string name="summary_support">Write in review so that we know your valuable feedback!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">More Apps</string>
    <string name="summary_trymore">Try more application </string>
    <string name="url_trymore">https://play.google.com/store/apps/developer?id=DO_BIG</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_night_mode">key_night_mode</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_text_size">text_size</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>


    /*end here pasteing*/
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_exit">Exit</string>
    <string name="digi_note">Digi-Note</string>
    <string name="how_it_work">How it Work</string>
    <string name="add">Add New Note</string>
    <string name="search">My Notes </string>
    <string name="delete_edit">Delete/ Edit</string>
    <string name="communicate">Communicate</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="smart_way_of_learning">Smart way of learning</string>
    <string name="digi_notes">Digi Notes</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Add Notes </string>
    <string name="slide_1_desc">The easiest way to store your favourite topics!</string>

    <string name="slide_2_title">Search </string>
    <string name="slide_2_desc">Easy to search Notes by Time or by Title</string>

    <string name="slide_3_title">Update AND Delete</string>
    <string name="slide_3_desc">Easy Way to Delete And Update Just click the edit option in full description Screen</string>

    <string name="slide_4_title">Easy Learning</string>
    <string name="slide_4_desc">Get full Notes by tap Away!!
    READY ........</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_text_size_entries">
        <item>small</item>
        <item>normal</item>
        <item>large</item>
        <item>Extra large</item>

    </string-array>
    <string-array name="pref_text_size_values">
        <item>14</item>
        <item>18</item>
        <item>20</item>
        <item>30</item>

    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_text_field_cannot_empty">Field can not be empty</string>

</resources>
