<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="Night Mode">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="nightMode"
            android:summary="@string/to_read_in_deam_light"
            android:title="@string/title_night_mode" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/TextSize">


        <ListPreference
            android:defaultValue="3"
            android:dialogTitle="@string/text_size"
            android:entries="@array/pref_text_size_entries"
            android:entryValues="@array/pref_text_size_values"
            android:key="TextSize"
            android:summary="@string/summary_upload_video_quality"
            android:title="@string/text_size" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />

        <!-- preference opens url in browser -->
        <Preference
            android:summary="@string/summary_trymore"
            android:title="@string/title_faq">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_trymore" />
        </Preference>


    </PreferenceCategory>
</PreferenceScreen>